WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282576
[JSC] Fix ref-counting issues with Wasm GC types
https://bugs.webkit.org/show_bug.cgi?id=282576
Summary
[JSC] Fix ref-counting issues with Wasm GC types
Dan Hecht
Reported
2024-11-04 16:50:33 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-04 16:50:43 PST
<
rdar://problem/139244985
>
Dan Hecht
Comment 2
2024-11-04 17:13:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36165
EWS
Comment 3
2024-11-05 00:38:06 PST
Committed
286140@main
(3ec2959867b0): <
https://commits.webkit.org/286140@main
> Reviewed commits have been landed. Closing PR #36165 and removing active labels.
EWS
Comment 4
2024-11-07 13:47:10 PST
Committed
283286.450@safari-7620-branch
(0b400627a242): <
https://commits.webkit.org/283286.450@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2246 and removing active labels.
Yusuke Suzuki
Comment 5
2025-01-07 16:57:55 PST
***
Bug 285102
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug