Source/JavaScriptCore/wasm/WasmModuleInformation.h
@@ -172,6 +172,7 @@ struct ModuleInformation final : public ThreadSafeRefCounted<ModuleInformation> 
     Vector<TypeIndex> importExceptionTypeIndices;
     Vector<TypeIndex> internalExceptionTypeIndices;
     Vector<Ref<TypeDefinition>> typeSignatures;
+    Vector<Ref<TypeDefinition>> recursionGroups;
 
     MemoryInformation memory;
 
