Source/JavaScriptCore/wasm/WasmSectionParser.cpp
@@ -115,11 +115,14 @@ auto SectionParser::parseType() -> PartialResult
             // Recursion group parsing will append the entries itself, as there may
             // be multiple entries that need to be added to the type section for
             // each recursion group.
-            if (!signature->is<RecursionGroup>()) {
+            if (signature->is<RecursionGroup>())
+                m_info->recursionGroups.append(signature.releaseNonNull());
+            else {
                 if (signature->hasRecursiveReference()) {
                     Vector<TypeIndex> types;
                     bool result = types.tryAppend(signature->index());
                     WASM_PARSER_FAIL_IF(!result, "can't allocate enough memory for Type section's "_s, i, "th signature"_s);
+                    // group takes ownership of signature via types, and projection takes ownership of group.
                     RefPtr<TypeDefinition> group = TypeInformation::typeDefinitionForRecursionGroup(types);
                     RefPtr<TypeDefinition> projection = TypeInformation::typeDefinitionForProjection(group->index(), 0);
                     TypeInformation::registerCanonicalRTTForType(projection->index());
@@ -954,7 +957,8 @@ auto SectionParser::parseRecursionGroup(uint32_t position, RefPtr<TypeDefinition
     WASM_PARSER_FAIL_IF(typeCount > maxRecursionGroupCount, "number of types for recursion group at position "_s, position, " is too big "_s, typeCount, " maximum "_s, maxRecursionGroupCount);
     Vector<TypeIndex> types;
     WASM_PARSER_FAIL_IF(!types.tryReserveInitialCapacity(typeCount), "can't allocate enough memory for recursion group "_s, typeCount, " entries"_s);
-    RefPtr<TypeDefinition> firstSignature;
+    Vector<Ref<TypeDefinition>> signatures;
+    WASM_PARSER_FAIL_IF(!signatures.tryReserveInitialCapacity(typeCount), "can't allocate enough memory for recursion group "_s, typeCount, " entries"_s);
 
     SetForScope<RecursionGroupInformation> recursionGroupInfo(m_recursionGroupInformation, RecursionGroupInformation { true, m_info->typeCount(), m_info->typeCount() + typeCount });
 
@@ -986,11 +990,9 @@ auto SectionParser::parseRecursionGroup(uint32_t position, RefPtr<TypeDefinition
 
         WASM_PARSER_FAIL_IF(!signature, "can't allocate enough memory for recursion group's "_s, i, "th signature"_s);
         types.append(signature->index());
-
-        if (!i)
-            firstSignature = signature;
+        signatures.append(signature.releaseNonNull());
     }
-
+    // Recursion group takes ownership of signatures via types.
     recursionGroup = TypeInformation::typeDefinitionForRecursionGroup(types);
 
     // Type definitions are normalized such that non-recursive, singleton recursion groups
@@ -999,32 +1001,37 @@ auto SectionParser::parseRecursionGroup(uint32_t position, RefPtr<TypeDefinition
     WASM_PARSER_FAIL_IF(!m_info->typeSignatures.tryGrowCapacityBy(typeCount), "can't allocate enough memory for recursion group's "_s, typeCount, " type "_s, typeCount > 1 ? "indices"_s : "index"_s);
     WASM_PARSER_FAIL_IF(!m_info->rtts.tryGrowCapacityBy(typeCount), "can't allocate enough memory for recursion group's "_s, typeCount, " RTT"_s, typeCount > 1 ? "s"_s : ""_s);
     if (typeCount > 1) {
+        Vector<Ref<TypeDefinition>> projections;
+        // Take ownership of all projections before unrolling since they can refer to each other.
         for (uint32_t i = 0; i < typeCount; ++i) {
             RefPtr<TypeDefinition> projection = TypeInformation::typeDefinitionForProjection(recursionGroup->index(), i);
             WASM_PARSER_FAIL_IF(!projection, "can't allocate enough memory for recursion group's "_s, i, "th projection"_s);
-            TypeInformation::registerCanonicalRTTForType(projection->index());
-            m_info->rtts.append(TypeInformation::getCanonicalRTT(projection->index()));
-            m_info->typeSignatures.append(projection.releaseNonNull());
+            projections.append(projection.releaseNonNull());
+        }
+        for (uint32_t i = 0; i < typeCount; ++i) {
+            TypeInformation::registerCanonicalRTTForType(projections[i]->index());
+            m_info->rtts.append(TypeInformation::getCanonicalRTT(projections[i]->index()));
+            m_info->typeSignatures.append(WTFMove(projections[i]));
         }
         // Checking subtyping requirements has to be deferred until we construct projections in case recursive references show up in the type.
         for (uint32_t i = 0; i < typeCount; ++i) {
-            const TypeDefinition& def = TypeInformation::get(types[i]).replacePlaceholders(recursionGroup->index());
-            if (def.is<Subtype>())
+            Ref def = TypeInformation::get(types[i]).replacePlaceholders(recursionGroup->index());
+            if (def->is<Subtype>())
                 WASM_FAIL_IF_HELPER_FAILS(checkSubtypeValidity(def));
         }
     } else if (typeCount) {
-        if (!firstSignature->hasRecursiveReference()) {
-            TypeInformation::registerCanonicalRTTForType(firstSignature->index());
-            m_info->rtts.append(TypeInformation::getCanonicalRTT(firstSignature->index()));
-            if (firstSignature->is<Subtype>())
-                WASM_FAIL_IF_HELPER_FAILS(checkSubtypeValidity(*firstSignature));
-            m_info->typeSignatures.append(firstSignature.releaseNonNull());
+        if (!signatures[0]->hasRecursiveReference()) {
+            TypeInformation::registerCanonicalRTTForType(signatures[0]->index());
+            m_info->rtts.append(TypeInformation::getCanonicalRTT(signatures[0]->index()));
+            if (signatures[0]->is<Subtype>())
+                WASM_FAIL_IF_HELPER_FAILS(checkSubtypeValidity(signatures[0]));
+            m_info->typeSignatures.append(WTFMove(signatures[0]));
         } else {
             RefPtr<TypeDefinition> projection = TypeInformation::typeDefinitionForProjection(recursionGroup->index(), 0);
             WASM_PARSER_FAIL_IF(!projection, "can't allocate enough memory for recursion group's 0th projection"_s);
             TypeInformation::registerCanonicalRTTForType(projection->index());
             m_info->rtts.append(TypeInformation::getCanonicalRTT(projection->index()));
-            if (firstSignature->is<Subtype>())
+            if (signatures[0]->is<Subtype>())
                 WASM_FAIL_IF_HELPER_FAILS(checkSubtypeValidity(projection->unroll()));
             m_info->typeSignatures.append(projection.releaseNonNull());
         }
@@ -1127,7 +1134,7 @@ auto SectionParser::parseSubtype(uint32_t position, RefPtr<TypeDefinition>& subt
         // If a parent type is in the same recursion group, the index needs to refer to the projection instead.
         else {
             RefPtr<TypeDefinition> projection = TypeInformation::getPlaceholderProjection(typeIndex - m_info->typeCount());
-            supertypeIndex = projection->index();
+            supertypeIndex = projection->index(); // Placeholders are owned by TypeInformation singleton.
         }
     }
 
@@ -1159,6 +1166,7 @@ auto SectionParser::parseSubtype(uint32_t position, RefPtr<TypeDefinition>& subt
         return { };
     }
 
+    // Subtype takes ownership of underlyingType.
     if (supertypeCount > 0)
         subtype = TypeInformation::typeDefinitionForSubtype({ supertypeIndex }, TypeInformation::get(*underlyingType), isFinal);
     else
